# boids-AA222

./: .gitignore  README.md
latex/presentation/: main.tex
latex/proposal/: proposal.tex
latex/report/: icml2020.sty  main.tex  references.bib
latex/report/figures/: survival.eps
src/cpp/: CMakeLists.txt  boid.cpp  boid.hpp  flock.cpp  flock.hpp  main.cpp  predator.cpp  predator.hpp  prey.cpp  prey.hpp  progress.hpp  quadtree.hpp  system.cpp  system.hpp  vec2.hpp
src/data/: results.csv
src/python/: analysis.py
